--- a/indice.HTML
+++ b/indice.HTML
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Esto es la Matrix</title>
 </head>
-<body>
+<body style="margin: 0">
    <canvas height="800" width="800" id="LienzoMatrix"></canvas>
    <script src="Matrix.JS"></script>
 </body>
